--- a/index.html
+++ b/index.html
@@ -4,26 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="style/styles.css" />
 
     <title>Frontend Mentor | Profile card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style></style>
   </head>
   <body>
-    Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+    <div class="top-bg"><img src="images/bg-pattern-top.svg" alt="" /></div>
+    <main class="container">
+      <section class="top">
+        <img src="images/bg-pattern-card.svg" alt="" class="banner-top" />
+      </section>
+      <section class="bottom">
+        <div class="portrait-container">
+          <img src="images/image-victor.jpg" alt="" class="portrait" />
+        </div>
+        <div class="personal-data">
+          <div class="top-data">
+            <span class="name">Victor Crest</span>
+            <span class="age">26</span>
+          </div>
+          <div class="bottom-data">
+            <span class="city">London</span>
+          </div>
+        </div>
+        <hr />
+        <div class="social-data">
+          <div class="followers">
+            <span class="number">80K</span>
+            <span class="text">Followers</span>
+          </div>
+          <div class="likes">
+            <span class="number">803K</span>
+            <span class="text">Likes</span>
+          </div>
+          <div class="photos">
+            <span class="number">1.4K</span>
+            <span class="text">Photos</span>
+          </div>
+        </div>
+      </section>
+    </main>
+    <div class="bottom-bg">
+      <img src="images/bg-pattern-bottom.svg" alt="" />
     </div>
   </body>
 </html>
