--- a/index.html
+++ b/index.html
@@ -58,5 +58,11 @@
     <div class="bottom-bg">
       <img src="images/bg-pattern-bottom.svg" alt="" />
     </div>
+    <footer>
+      <p>
+        Challenge by Frontend Mentor. Coded by
+        <a href="http://www.twitter.com/devafterall">MauroLG</a>
+      </p>
+    </footer>
   </body>
 </html>
