Added bg-patterns as bg images. Improve responsive design

--- a/index.html
+++ b/index.html
@@ -15,54 +15,52 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    <div class="top-bg"><img src="images/bg-pattern-top.svg" alt="" /></div>
-    <main class="container">
-      <section class="top">
-        <img src="images/bg-pattern-card.svg" alt="" class="banner-top" />
-      </section>
-      <section class="bottom">
-        <div class="portrait-container">
-          <img src="images/image-victor.jpg" alt="" class="portrait" />
-        </div>
-        <div class="personal-data">
-          <div class="top-data">
-            <span class="name">Victor Crest</span>
-            <span class="age">26</span>
+    <main class="main-container">
+      <main class="container">
+        <section class="top">
+          <img src="images/bg-pattern-card.svg" alt="" class="banner-top" />
+        </section>
+        <section class="bottom">
+          <div class="portrait-container">
+            <img src="images/image-victor.jpg" alt="" class="portrait" />
           </div>
-          <div class="bottom-data">
-            <span class="city">London</span>
+          <div class="personal-data">
+            <div class="top-data">
+              <span class="name">Victor Crest</span>
+              <span class="age">26</span>
+            </div>
+            <div class="bottom-data">
+              <span class="city">London</span>
+            </div>
           </div>
-        </div>
-        <hr />
-        <div class="social-data">
-          <div class="followers">
-            <span class="number">80K</span>
-            <span class="text">Followers</span>
+          <hr />
+          <div class="social-data">
+            <div class="followers">
+              <span class="number">80K</span>
+              <span class="text">Followers</span>
+            </div>
+            <div class="likes">
+              <span class="number">803K</span>
+              <span class="text">Likes</span>
+            </div>
+            <div class="photos">
+              <span class="number">1.4K</span>
+              <span class="text">Photos</span>
+            </div>
           </div>
-          <div class="likes">
-            <span class="number">803K</span>
-            <span class="text">Likes</span>
-          </div>
-          <div class="photos">
-            <span class="number">1.4K</span>
-            <span class="text">Photos</span>
-          </div>
-        </div>
-      </section>
+        </section>
+        <footer>
+          <p>
+            Challenge by Frontend Mentor. Coded by
+            <a href="http://www.twitter.com/devafterall">MauroLG</a>
+          </p>
+        </footer>
+      </main>
     </main>
-    <div class="bottom-bg">
-      <img src="images/bg-pattern-bottom.svg" alt="" />
-    </div>
-    <footer>
-      <p>
-        Challenge by Frontend Mentor. Coded by
-        <a href="http://www.twitter.com/devafterall">MauroLG</a>
-      </p>
-    </footer>
   </body>
 </html>
