--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <main class="main-container">
-      <main class="container">
+      <div class="container">
         <section class="top">
           <img src="images/bg-pattern-card.svg" alt="" class="banner-top" />
         </section>
@@ -60,7 +60,7 @@
             <a href="http://www.twitter.com/devafterall">MauroLG</a>
           </p>
         </footer>
-      </main>
+      </div>
     </main>
   </body>
 </html>
